ko/15.3/admin/scheduler-guide.rst
=========
스케줄러
=========

개요
====

여기에서는 작업 스케줄러에 관한 설정에 대해 설명합니다.

관리 방법
======

표시 방법
------

아래 그림의 작업 스케줄러 설정 목록 페이지를 열려면 왼쪽 메뉴의 [시스템 > 스케줄러]를 클릭합니다.

|image0|

편집하려면 설정 이름을 클릭합니다.

설정 생성
--------

스케줄러 설정 페이지를 열려면 신규 생성 버튼을 클릭합니다.

|image1|

설정 항목
------

이름
::::

목록에 표시되는 이름입니다.

대상
::::

대상은 작업을 배치 등에서 직접 명령 실행할 때 실행할지 여부의 식별자로 사용할 수 있습니다.
크롤을 명령 실행 등 하지 않는 경우 "all"을 지정하십시오.

스케줄
:::::::::

스케줄 설정을 수행합니다.
여기에서 설정한 스케줄로 스크립트에 기술한 작업이 실행됩니다.

기술 형식은 CRON 형식으로 "분 시 일 월 요일" 형식으로 기술합니다.
예를 들어 "0 12 \* \* 3"인 경우 매주 수요일 12:00pm에 작업을 실행합니다.

실행 방법
::::::

스크립트의 실행 환경을 지정합니다.
현재 "groovy"만 지원합니다.

스크립트
::::::::

작업의 실행 내용을 실행 방법에서 지정한 언어로 기술합니다.

예를 들어 3개의 크롤 설정만을 크롤 작업으로 실행하려는 경우 다음과 같이 기술합니다(웹 크롤 설정의 ID를 1과 2로, 파일 시스템 크롤 설정의 ID를 1로 가정).

::

    return container.getComponent("crawlJob").logLevel("info").webConfigIds(["1", "2"] as String[]).fileConfigIds(["1"] as String[]).dataConfigIds([] as String[]).execute(executor);

로깅
::::::

활성화하면 작업 로그에 기록됩니다.

크롤러 작업
::::::::::::

활성화하면 크롤러 작업으로 처리됩니다.
fess_config.properties에서 job.max.crawler.processes를 설정하면 크롤러가 필요 이상으로 시작되는 것을 방지할 수 있습니다.
기본적으로 크롤러의 시작 수에 제한이 없습니다.

상태
::::

작업의 활성화/비활성화 상태를 지정합니다.
비활성화한 경우 작업이 실행되지 않습니다.

표시 순서
::::::

작업 목록에서의 표시 순서를 지정합니다.

설정 삭제
--------

목록 페이지의 설정 이름을 클릭하고 삭제 버튼을 클릭하면 확인 화면이 표시됩니다.
삭제 버튼을 누르면 설정이 삭제됩니다.

수동 크롤 방법
============

"스케줄러"의 "Default Crawler"를 클릭하고 "지금 시작" 버튼을 클릭합니다.
크롤러를 중지하려면 "Default Crawler"를 클릭하고 "중지" 버튼을 클릭하십시오.

.. |image0| image:: ../../../resources/images/ja/15.3/admin/scheduler-1.png
.. |image1| image:: ../../../resources/images/ja/15.3/admin/scheduler-2.png
